--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -8,6 +8,13 @@
     </testsuites>
 
 
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <file>../src/Common/Model/Dao/Table.php</file>
+            <file>../src/Common/Model/Mapper/Core.php</file>
+        </whitelist>
+    </filter>
+
     <logging>
         <log type="coverage-html" target="report/html" charset="UTF-8"
              highlight="false" lowUpperBound="35" highLowerBound="70"/>
@@ -20,6 +27,8 @@
         <log type="testdox-html" target="report/testdox.html"/>
         <log type="testdox-text" target="report/testdox.txt"/>
     </logging>
+
+
 
 
 </phpunit>
