--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -4,6 +4,7 @@
         <testsuite name="ZF2 Common">
             <file>./CommonTest/Model/Dao/TableTest.php</file>
             <file>./CommonTest/Model/Mapper/CoreTest.php</file>
+            <file>./CommonTest/Model/Service/CoreTest.php</file>
         </testsuite>
     </testsuites>
 
@@ -12,6 +13,7 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <file>../src/Common/Model/Dao/Table.php</file>
             <file>../src/Common/Model/Mapper/Core.php</file>
+            <file>../src/Common/Model/Service/Core.php</file>
         </whitelist>
     </filter>
 
