Added unit tests for Date View Helper

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -5,6 +5,7 @@
             <file>./CommonTest/Model/Dao/TableTest.php</file>
             <file>./CommonTest/Model/Mapper/CoreTest.php</file>
             <file>./CommonTest/Model/Service/CoreTest.php</file>
+            <file>./CommonTest/View/Helper/DateTest.php</file>
         </testsuite>
     </testsuites>
 
@@ -14,6 +15,7 @@
             <file>../src/Common/Model/Dao/Table.php</file>
             <file>../src/Common/Model/Mapper/Core.php</file>
             <file>../src/Common/Model/Service/Core.php</file>
+            <file>../src/Common/View/Helper/Date.php</file>
         </whitelist>
     </filter>
 
